--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Nunito', sans-serif;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
